# cracklib

./: .gitignore  README.md  README.release.md  historical-tags-before-cleanup.txt  zanata.xml
.github/workflows/: build.yml  codeql-analysis.yml
cracklib/: .cvsignore  .gitignore  AUTHORS  Artistic  COPYING  ChangeLog  Makefile.am  NEWS  README  README-LICENSE  README-RELEASE  README-WORDS  autogen.sh  configure.ac  configure.in  cracklib.spec  cracklib.spec.in  test-data
cracklib-words/: Makefile  README.md
cracklib-words/src/: clarkson-passwords
cracklib-words/src/clarkson.edu/: clarkson.txt.bz2
cracklib-words/src/mark-burnett/: 10k-most-common.txt.bz2  scored-above-50.bz2
cracklib-words/src/openwall/: lower.bz2
cracklib-words/src/skullsecurity.org/: alypaa.txt.bz2  carders.cc.txt.bz2  hak5.txt.bz2  myspace.txt.bz2
cracklib/dicts/: .cvsignore  Makefile.am  cracklib-small
cracklib/doc/: Makefile.am  cracklib.magic
cracklib/lib/: .cvsignore  Makefile.am  crack.h  fascist.c  packer.h  packlib.c  rules.c  stringlib.c
cracklib/m4/: ChangeLog
cracklib/po/: .cvsignore  ChangeLog  as.po  bn_IN.po  cracklib.cs.po  cracklib.de.po  cracklib.hu.po  cracklib.nl.po  cracklib.pot  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  gu.po  hi.po  hu.po  it.po  ja.po  kn.po  kn_IN.po  ko.po  lt.po  ml.po  mr.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl_SI.po  ta.po  te.po  tr.po  (+3 more)
cracklib/python/: .cvsignore  Makefile.am  _cracklibmodule.c  cracklib.py  cracklibmodule.c  setup.cfg  setup.py.in  test_cracklib.py
cracklib/util/: .cvsignore  .gitignore  Makefile.am  check.c  cracklib-format  create-cracklib-dict  create-cracklib-dict.in  mkdict  packer.c  testcheck.c  testlib.c  testnum.c  teststr.c  unpacker.c
src/: .gitignore  AUTHORS  Makefile.am  NEWS  README  README-DAWG  README-RELEASE  README-WORDS  autogen.sh  configure.ac  cracklib.spec.in  test-data
src/doc/: FascistCheck.3  Makefile.am  cracklib-check.8  cracklib-format.8  cracklib-update.8  create-cracklib-dict.8
src/lib/: Makefile.am  fascist.c  packer.h  packlib.c  portable_endian.h  rules.c  stringlib.c
src/po/: POTFILES.in  as.po  be.po  bn_IN.po  ca.po  cracklib.pot  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fi.po  fr.po  fur.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  lt.po  ml.po  mr.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  (+11 more)
src/python/: Makefile.am  _cracklib.c  cracklib.py  setup.py.in  test_cracklib.py
src/util/: .gitignore  Makefile.am  check.c  cracklib-format  cracklib-update  packer.c  testlib.c  testnum.c  teststr.c  unpacker.c
words/: .gitignore  Makefile  README.md
words/files/mark-burnett/: passed-basic-check.bz2
words/files/openwall/: password.bz2
words/files/skullsecurity.org/: cain.txt.bz2  conficker.txt.bz2  elitehacker.txt.bz2  facebook-pastebay.txt.bz2  facebook-phished.txt.bz2  faithwriters.txt.bz2  hotmail.txt.bz2  phpbb.txt.bz2  porn-unknown.txt.bz2  singles.org.txt.bz2  tuscl.txt.bz2  twitter-banned.txt.bz2
